<resources>
    <string name="app_name">SmsPreview</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="Next">Next</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="preview_background">Preview Background</string>
    <string name="done">Done</string>
    <string name="sms_preview_settings">SMS Preview Settings</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="display_toast">Display toast</string>
    <string name="toast_duration">Toast Duration</string>
</resources>